# blog-generator

./: .gitignore  README.md  pnpm-lock.yaml  turbo.json
apps/adk/: README.md  package.json
apps/adk/root_agent/: agent.py  pyproject.toml
apps/adk/root_agent/subagents/: __init__.py
apps/adk/root_agent/subagents/output_structure_agent/: __init__.py  agent.py
apps/adk/root_agent/subagents/web_search_agent/: __init__.py  agent.py
apps/agents/: .gitignore  package.json  pyproject.toml
apps/agents/src/: main.py
apps/agents/src/agents/: main.py
apps/client/: README.md  package.json
apps/client/app/: layout.tsx  not-found.tsx  page.tsx
apps/client/app/dashboard/: page.tsx
apps/client/app/generate/: page.tsx
apps/client/app/get-started/: page.tsx
apps/client/app/login/: page.tsx
apps/client/components/: BlogGenerationForm.tsx  CTASection.tsx  ComingSoonSection.tsx  DemoSection.tsx  DynamicLoader.tsx  FeautresSection.tsx  GeneratedPostDisplay.tsx  HeroSection.tsx  Navigation.tsx  ProgressiveLoader.tsx  ProtectedRouteWrapper.tsx  providers.tsx
apps/client/lib/: apiClient.ts
apps/genkit/: .env.example  README.md  package-lock.json  package.json
apps/genkit/src/: debug-config.ts  index.ts
apps/genkit/src/config/: index.ts
apps/genkit/src/flows/: 01summariseYoutubeVideoFlow.ts  02generateSearchTerms.ts  03getSearchTermResults.ts  04generateFinalSummaryFlow.ts  05generateBlogFlow.ts  05imageGenerationFlow.ts  06generateBlogFlow.ts  ytVideoFlows.ts
apps/genkit/src/prompts/: index.ts
apps/genkit/src/services/: ai.ts  authMiddleware.ts  authMiddlewares.ts  controller.ts  uploadToCloud.ts
apps/genkit/src/tools/: fetchSearchTermDetails.ts  replaceKeysWithSearchTerms.ts
apps/genkit/src/types/: types.ts
apps/genkit/src/utils/: ai.ts  getYoutubeVideoId.ts
apps/server/: README.md  package.json
apps/server/src/: index.ts
apps/server/src/config/: index.ts
apps/server/src/controllers/: agentController.ts  authController.ts  userController.ts
apps/server/src/middlewares/: authMiddleware.ts
apps/server/src/routes/: agentRouter.ts  authRouter.ts  userRouter.ts
apps/server/src/services/: dbServices.ts  rateLimitter.ts
apps/server/src/utils/: data.ts  quicker.ts
apps/transcript/: README.md  pyproject.toml
apps/transcript/src/transcript/: get_transcript.py  main.py
infra/docker/genkit/: .dockerignore  Dockerfile
infra/docker/transcript/: .dockerignore  Dockerfile
