[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Mayank Tiwari",email = "mayanktiwari1212.mt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)"
]

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.scripts]
dev = "src.main:run_dev"
start = "src.main:run_prod"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
