[project]
name = "agents"
version = "0.1.0"
description = "A package for ADK agents"
authors = [
    {name = "Mayank Tiwari",email = "devmayanktiwari@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]

[tool.poetry.scripts]
start = "agents.main:start"
dev = "agents.main:start"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
