[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Mayank",email = "mayanktiwari1212.mt@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk (>=1.3.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agents", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
